# fit_fie_reader

./: Cargo.toml
.github/workflows/: build.yml  lint.yml
src/: main.rs
testdata/expected/: expected1.txt  expected2.txt
testdata/input/: input1.txt  input2.txt
